# stripe-project

./: .env.sample  README.md  items.json  pyproject.toml
config/: settings.py  urls.py
store/: admin.py  models.py  urls.py  views.py
store/management/commands/: create_superuser.py
store/migrations/: 0001_initial.py
store/templates/store/: base.html  items_detail.html  items_list.html
